added UserService, UserController and partial, minor fixes

--- a/main.html
+++ b/main.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="form-header"
                      style=" display: flex; justify-content: center; align-items: center; padding-left: 25px">
-                    AllStore
+                    AllStore{{account}}
                 </div>
             </div>
 
@@ -127,11 +127,13 @@
     <script src="js/service/StoreService.js"></script>
     <script src="js/service/ReviewService.js"></script>
     <script src="js/service/SecurityServices.js"></script>
+    <script src="js/service/UserService.js"></script>
     <script src="js/controller/StoreController.js"></script>
     <script src="js/controller/AppController.js"></script>
     <script src="js/controller/ItemFormController.js"></script>
     <script src="js/controller/LoginController.js"></script>
     <script src="js/controller/StoreManagerController.js"></script>
+    <script src="js/controller/UserController.js"></script>
 
     <script src="js/controller/sampleController.js"></script>
     <script src="js/controller/ItemController.js"></script>
