--- a/main.html
+++ b/main.html
@@ -134,6 +134,7 @@
     <script src="js/controller/LoginController.js"></script>
     <script src="js/controller/StoreManagerController.js"></script>
     <script src="js/controller/UserController.js"></script>
+    <script src="js/controller/ErrorController.js"></script>
 
     <script src="js/controller/sampleController.js"></script>
     <script src="js/controller/ItemController.js"></script>
