changed way to show welcome dialog to ng-init

--- a/main.html
+++ b/main.html
@@ -94,7 +94,7 @@
         </div>
 
 
-        <div>
+        <div ng-init="showAlert($event)">
             <ng-view style="width: 100%"></ng-view>
         </div>
 
