--- a/main.html
+++ b/main.html
@@ -88,7 +88,7 @@
                 <div style="padding-right: 25px">
                     <!--<img style="height: 75px; margin-right: 25px" src="http://icons.iconarchive.com/icons/iconsmind/outline/512/Full-Basket-icon.png"/>-->
                     <md-icon access="admin" ng-click="showAdvanced($event)" class="iconTopNavMaterial">shopping_basket</md-icon>
-                    <md-icon class="iconTopNavMaterial">person</md-icon>
+                    <md-icon access="ROLE_ADMIN" class="iconTopNavMaterial">person</md-icon>
                 </div>
             </div>
         </div>
