--- a/main.html
+++ b/main.html
@@ -87,7 +87,7 @@
             <div flex="33" hide show-gt-sm layout="row" layout-align="end center">
                 <div style="padding-right: 25px">
                     <!--<img style="height: 75px; margin-right: 25px" src="http://icons.iconarchive.com/icons/iconsmind/outline/512/Full-Basket-icon.png"/>-->
-                    <div>Logged as: {{user.username}}</div>
+                    <div>Logged as: {{account.username}}</div>
                     <md-icon ng-click="showAdvanced($event)" class="iconTopNavMaterial">shopping_basket</md-icon>
                     <md-icon class="iconTopNavMaterial" ng-click="logout()">person</md-icon>
                 </div>
