--- a/main.html
+++ b/main.html
@@ -129,6 +129,7 @@
     <script src="js/controller/ItemFormController.js"></script>
     <script src="js/controller/LoginController.js"></script>
     <script src="js/controller/StoreManagerController.js"></script>
+    <script src="js/controller/UserController.js"></script>
 
     <script src="js/controller/sampleController.js"></script>
     <script src="js/controller/ItemController.js"></script>
