--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <head>
     <!-- Angular Material style sheet -->
     <!--<link rel="stylesheet" href="css/materialize/materialize.css">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
