added view for user orders and user profile

--- a/main.html
+++ b/main.html
@@ -124,6 +124,7 @@
     <script src="js/service/StoreService.js"></script>
     <script src="js/service/ReviewService.js"></script>
     <script src="js/service/OrderService.js"></script>
+    <script src="js/service/UserService.js"></script>
     <script src="js/controller/StoreController.js"></script>
     <script src="js/controller/AppController.js"></script>
     <script src="js/controller/ItemFormController.js"></script>
