changed sidenav locked visible on gt-sm

--- a/main.html
+++ b/main.html
@@ -56,7 +56,7 @@
 
         <div style="background-color: #80CBC4;" layout="column" layout-gt-sm="row">
             <div flex-gt-md="33" flex="" layout="row">
-                <div hide-gt-md>
+                <div hide-gt-sm>
                     <md-icon ng-click="toggleLeft()" class="hamburger-menu-icon">
                         menu
                     </md-icon>
