blur on search input after selecting item

--- a/main.html
+++ b/main.html
@@ -79,7 +79,7 @@
                         <label>
                             <md-icon>search</md-icon>
                             Look for product</label>
-                        <input ng-model="itemName" ng-change="getItemsByName()" type="text">
+                        <input id="searchInput" ng-model="itemName" ng-change="getItemsByName()" type="text">
                     </md-input-container>
                 </md-card>
             </div>
