--- a/main.html
+++ b/main.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/stars.css">
 </head>
-<body ng-cloak style="margin: 0" layout="column">
+<body ng-cloak style="margin: 0">
 
 
-    <div flex="100" ng-controller="AppCtrl" layout="column" ng-cloak>
+    <div ng-controller="AppCtrl" layout="column" style="height: auto;" ng-cloak>
 
         <!--        <md-toolbar layout="row" style="background-color: #80CBC4; padding: 10px">
                     <div hide-gt-md flex="5" ng-show="pageHasSideNav">
