--- a/main.html
+++ b/main.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="form-header"
                      style=" display: flex; justify-content: center; align-items: center; padding-left: 25px">
-                    AllStore{{account}}
+                    AllStore
                 </div>
             </div>
 
