--- a/main.html
+++ b/main.html
@@ -70,6 +70,7 @@
                 <div class="form-header"
                      style=" display: flex; justify-content: center; align-items: center; padding-left: 25px">
                     AllStore
+                    {{account}}
                 </div>
             </div>
 
